[tool.poetry]
name = "arcadeseller"
version = "0.1.0"
description = "This is a software that allows the user to buy an arcade machine of a custom material and custom color joysticks, also have the options to se the sales history and customer data"
authors = ["Miguel Sanabria <masanabriap@udistrital.edu.co>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
